--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fidelem</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>FIDELEM</title>
+    <meta name="FIDELEM" content="FIDELEM" />
+    <meta name="author" content="FIDELEM" />
+    <meta name="description" content="FIDELEM" />
+    <link rel="icon" href="/src/assets/logo.png" type="image/x-icon" />
 
-    <meta property="og:title" content="fidelem" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+      <!-- Open Graph Meta Tags for Social Sharing -->
+      <meta property="og:title" content="FIDELEM" />
+      <meta property="og:description" content="FIDELEM" />
+      <meta property="og:image" content="https://fidelem.vercel.app/assets/logo.png" />
+      <meta property="og:url" content="https://fidelem.vercel.app/" />
+      <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+          <!-- Twitter Card Meta Tags for Social Sharing -->
+    <meta name="twitter:card" content="sumary_large_image" />
+    <meta name="twitter:title" content="FIDELEM" />
+    <meta name="twitter:description" content="FIDELEM" />
+    <meta name="twitter:image" content="https://fidelem.vercel.app/assets/logo.png" />
+    <meta name="twitter:url" content="https://fidelem.vercel.app" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
